[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fireguard-scout"
version = "0.1.0"
description = "Lightweight system monitoring agent for Fireguard"
authors = [{ name = "Shawn Andrews", email = "andrews.shawn@gmail.com" }]
readme = "README.md"
license = "MIT"  # â† Use SPDX short form
requires-python = ">=3.8"

[project.scripts]
scout = "fireguard_scout.main:main"
