[metadata]
name = fireguard-scout
version = 0.1.0
author = Shawn Andrews
description = Lightweight agent for reporting infra metrics to Fireguard
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    scout = fireguard_scout.main:main
